# tutkinta-avustin

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml
data/: synthetic_case.json
src/: audit.py  demo_contrast.py  demo_perspectives.py  guardrails.py  pipeline.py
src/agents/: graph.py
tests/: test_pipeline.py
